--- a/app/templates/expense_categories/associated_records.html
+++ b/app/templates/expense_categories/associated_records.html
@@ -8,8 +8,14 @@
     <h3>{{ category.name }}</h3>
     <a href="{{ url_for('expense_category.index') }}" class="btn btn-light fs-6"><i class="bi bi-arrow-return-left"></i> Go back</a>
     <div class="my-3 border rounded-3">
-        <div class=" rounded-top d-flex align-items-center justify-content-center" style="height: 50px; background-color: #ff0000;">
-            <h4 class="d-flex justify-content-center">Expenses</h4>
+        <div class="rounded-top d-flex align-items-center justify-content-center p-2" style="height: 60px; background-color: #ff0000;">
+            <div class="me-auto">
+                <h4 class="d-flex justify-content-center">Expenses</h4>
+            </div>
+            <div class="w-100" style="max-width: 217px;">
+                <input type="text" name="filter-input-expense" id="filter-input-expense-id" class="form-control"
+                    placeholder="Search...">
+            </div>
         </div>
         <div id="expenses-table-container" class="table-responsive overflow-y-auto" style="max-height: 322px;">
             <table class="table table-borderless table-hover text-center" id="expenses-table">
@@ -30,10 +36,10 @@
                     <tr>
                         <th scope="row">{{ expense.id }}</th>
                         <td class="text-start">{{ format_amount(expense.amount) }}</td>
-                        <td>{{ 'YES' if expense.credit_card.is_cash else 'NO' }}</td>
+                        <td>{{ 'YES' if expense.is_cash else 'NO' }}</td>
                         <td class="text-start"> {{ expense.description or '-' }} </td>
                         <td>{{ expense.credit_card.nick_name or '-' }}</td>
-                        <td>{{ expense.bank_account.nick_name or '-' }}</td>
+                        <td>{{ expense.bank_account.nick_name }}</td>
                         <td class="text-start">{{ expense.expense_category.name }}</td>
                         <td>{{ expense.created_at }}</td>
                     </tr>
@@ -43,7 +49,12 @@
             </table>
         </div>
         <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
-            <p class="fs-6 fw-bold">TOTAL: {{ total_amount(category.expenses) }}</p>
+            <p class="fs-6 fw-bold" id="total-amounts-expenses-id">TOTAL: {{ total_amount(category.expenses) }}</p>
         </div>
     </div>
+
+    <p class="d-none" id="associated-records-endpoint-id">{{ url_for('expense_category.associated_records_in_json', id=category.id ) }}</p>
+    <script type="module" src="{{ url_for('static', filename='scripts/expense_category/filterAssociatedRecords.js' ) }}"></script>    
+    <script type="module" src="{{ url_for('static', filename='scripts/utils/dynamicTables.js' ) }}"></script>
+
 {% endblock %}
