update edit and delete buttons in expenses table with icons and change button style

--- a/app/templates/expenses/index.html
+++ b/app/templates/expenses/index.html
@@ -218,7 +218,7 @@
                         <div class="d-flex gap-2">
                             <button 
                                 type="button" 
-                                class="btn btn-success" 
+                                class="btn btn-outline-success" 
                                 data-bs-toggle="modal"
                                 data-bs-target="#edit-expense" 
                                 data-expense-id="{{ expense.id }}"
@@ -228,9 +228,10 @@
                                 data-select-credit-card-id="{{ expense.credit_card_id }}"
                                 data-select-bank-account-id="{{ expense.bank_account_id }}"
                                 data-description="{{ expense.description }}"
-                            >Edit
+                            >
+                                <i class="bi bi-pen"></i>
                             </button>
-                            <a href="{{ url_for('expense.delete', id=expense.id) }}" class="btn btn-danger">Delete</a>
+                            <a href="{{ url_for('expense.delete', id=expense.id) }}" class="btn btn-danger"><i class="bi bi-trash"></i></a>
                         </div>
                     </td>
                 </tr>
