--- a/app/templates/banks/index.html
+++ b/app/templates/banks/index.html
@@ -59,11 +59,11 @@
 
         <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-bank">New Bank</button>
         <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
-            <table class="table table-striped  table-hover">
+            <table class="table table-striped  table-hover text-center">
                 <thead class="sticky-top">
                     <tr>
                     <th scope="col"># Id</th>
-                    <th scope="col">Bank</th>
+                    <th scope="col"  class="text-start">Bank</th>
                     <th scope="col">Create at</th>
                     <th scope="col">Acctions</th>
                     </tr>
@@ -73,21 +73,21 @@
                     {% for bank in banks %}                    
                     <tr>
                         <th scope="row">{{ bank.id }}</th>
-                        <td>{{ bank.name }}</td>
+                        <td class="text-start">{{ bank.name }}</td>
                         <td>{{ bank.created_at }}</td>
-                        <td>
-                            <div class="d-flex gap-2">
+                        <td class="d-flex justify-content-center">
+                            <div class="d-flex gap-2 justify-content-center">
                                 <button 
                                     type="button" 
-                                    class="btn btn-success" 
+                                    class="btn btn-outline-success" 
                                     data-bs-toggle="modal" 
                                     data-bs-target="#edit-bank"
                                     data-id="{{ bank.id }}"
                                     data-name="{{ bank.name }}"
                                 >
-                                Edit
+                                    <i class="bi bi-pen"></i>
                                 </button>
-                                <a href="{{ url_for('bank.delete', id=bank.id ) }}" class="btn btn-danger">Delete</a>
+                                <a href="{{ url_for('bank.delete', id=bank.id ) }}" class="btn btn-danger"><i class="bi bi-trash"></i></a>
                             </div>
                         </td>
                     </tr>
