--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -51,7 +51,7 @@
         </div>
     </nav>
 
-    <main class="container mt-5 p-4">
+    <main class="container w-100 mt-5 p-4">
     {% block content %}
         
     {% endblock %}
