fix: correct container class for expenses section

--- a/app/templates/expenses/index.html
+++ b/app/templates/expenses/index.html
@@ -3,7 +3,7 @@
 {% block title %}Expenses{% endblock %}
 
 {% block content %}
-    <div class="container w-100">
+    <div class=" w-100">
         <h2>Expenses</h2>
         <section class="modal fade" tabindex="-1" id="create-expense">
             <form id="create-expense-form">
