--- a/app/templates/banks/index.html
+++ b/app/templates/banks/index.html
@@ -58,8 +58,8 @@
         </section>
 
         <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-bank">New Bank</button>
-        <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
-            <table class="table table-striped  table-hover">
+        <div class="table-responsive overflow-y-auto border rounded-3 mt-1 w-100" style="max-height: 457px; max-width: 1200px;">
+            <table class="table table-striped  table-hover text-center">
                 <thead class="sticky-top">
                     <tr>
                     <th scope="col"># Id</th>
