--- a/app/templates/expense_categories/associated_records.html
+++ b/app/templates/expense_categories/associated_records.html
@@ -49,7 +49,10 @@
             </table>
         </div>
         <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
-            <p class="fs-6 fw-bold" id="total-amounts-expenses-id">TOTAL: {{ total_amount(category.expenses) }}</p>
+            <div class="row text-center">
+                <p class="fs-6 fw-bold" id="total-amounts-expenses-id">TOTAL: {{ total_amount(category.expenses) }}</p>
+                <p class="fs-6 fw-bold" id="total-count-expenses-id">RECORDS: {{ category.expenses | length }}</p>
+            </div>
         </div>
     </div>
 
