--- a/app/templates/accounts_receivable/associated_records.html
+++ b/app/templates/accounts_receivable/associated_records.html
@@ -112,7 +112,10 @@
         </div>
 
         <div class="p-1 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
-            <p class="fs-6 fw-bold mx-2" id="total-amounts-loans-payments-id">TOTAL: {{ total_amount(loan.loan_payments) }}</p>
+            <div class="row text-center">
+                <p class="fs-6 fw-bold" id="total-amounts-loans-payments-id">TOTAL: {{ total_amount(loan.loan_payments) }}</p>
+                <p class="fs-6 fw-bold" id="total-count-loans-payments-id">RECORDS: {{ loan.loan_payments | length }}</p>
+            </div>
         </div>
     </div>
 
