--- a/app/templates/accounts_receivable/associated_records.html
+++ b/app/templates/accounts_receivable/associated_records.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <h3>Loan #{{ loan.id }} at {{ loan.created_at }}</h3>
+    <h3>Code: {{ loan.code }}</h3>
     <a href="{{ url_for('accounts_receivable.index') }}" class="btn btn-light fs-6"><i class="bi bi-arrow-return-left"></i> Go back</a>
     <section class="modal fade" tabindex="-1" id="edit-loan-payment">
         <form id="edit-loan-payment-form">
@@ -56,7 +56,7 @@
         </form>
     </section>
     
-    <div class="my-5 border rounded-3">
+    <div class="my-2 border rounded-3">
         <div class="bg-success rounded-top d-flex align-items-center justify-content-center p-2" style="height: 60px;">
             <div class="me-auto">
                 <h4 class="d-flex justify-content-center">Loan Payments</h4>
@@ -90,7 +90,7 @@
                             <div class="d-flex gap-2 justify-content-center">
                                 <button 
                                     type="button" 
-                                    class="btn btn-success" 
+                                    class="btn btn-outline-success" 
                                     data-bs-toggle="modal" 
                                     data-bs-target="#edit-loan-payment"
                                     data-endpoint="{{ url_for('accounts_receivable.update_loan_payment', loan_payment_id=payment.id) }}"
@@ -100,9 +100,9 @@
                                     data-is-cash="{{ payment.is_cash }}"
                                     data-bank-account-id="{{ payment.bank_account_id }}"
                                 >
-                                Edit
+                                    <i class="bi bi-pen"></i>
                                 </button>
-                                <a href="{{ url_for('accounts_receivable.delete_loan_payment', loan_payment_id=payment.id) }}" class="btn btn-danger">Delete</a>
+                                <a href="{{ url_for('accounts_receivable.delete_loan_payment', loan_payment_id=payment.id) }}" class="btn btn-danger"><i class="bi bi-trash"></i></a>
                             </div>
                         </td>
                     </tr>
